# fmt-md-tables

./: .gitignore  CLAUDE.md  README.md  fmt_md_tables.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_format.py
