[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmt-md-tables"
version = "0.1.0"
description = "Format markdown tables in a file so columns align."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Christian Visintin", email = "christian.visintin@veeso.dev" }]
keywords = ["markdown", "tables", "formatter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
fmt-md-tables = "fmt_md_tables:main"

[project.urls]
Homepage = "https://github.com/veeso/fmt-md-tables"

[tool.hatch.build.targets.wheel]
only-include = ["fmt_md_tables.py"]

[tool.hatch.build.targets.sdist]
include = ["fmt_md_tables.py", "README.md", "pyproject.toml"]
